--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Arsenal -->
     <div class="escudo">
         <img src="img/Arsenal_Logo_1000x1000.png" alt="">
-        <h2 id="arsenal">Arsenal</h2>
+        <h2 id="arsenal">Arsenal de Sarandi</h2>
     </div>
     <div class="camisetas" id="arsenal-local">
         <img src="img/mvk_arsenal3.png" alt="">
